# agenta

./: .gitignore  .pre-commit-config.yaml  .rules  Architecture.md  DeveloperGuide.MD  LLM_Configuration.md  README.md  TestingGuide.md  conversion-plan.md  package-lock.json  package.json  pyproject.toml
crewai-desktop/agenta/: .gitignore  README.md  index.html  package-lock.json  package.json  technical-implementation-plan.md  tsconfig.json  tsconfig.node.json  ui-improvements.md  vite.config.ts
crewai-desktop/agenta/src/: App.css  App.module.css  App.tsx  main.tsx
crewai-desktop/agenta/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crewai-desktop/agenta/src-tauri/backend/: main.py  requirements.txt
crewai-desktop/agenta/src-tauri/capabilities/: default.json
crewai-desktop/agenta/src-tauri/src/: main.rs  python.rs
crewai-desktop/agenta/src/components/: AgentPanel.module.css  AgentPanel.tsx  DebugPanel.module.css  DebugPanel.tsx  LLMSettingsPanel.module.css  LLMSettingsPanel.tsx  Sidebar.module.css  Sidebar.tsx  StatusBar.module.css  StatusBar.tsx  TaskExecution.module.css  TaskExecution.tsx
crewai-desktop/agenta/src/contexts/: ThemeContext.tsx
crewai-desktop/agenta/src/services/: api.ts
crewai-desktop/agenta/src/store/: backend.ts  index.ts
crewai-desktop/agenta/src/styles/: theme.css  theme.ts
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
src/backend/: .env  .env.template  main.py  requirements.txt
src/backend/agents/: base_agent.py  clear_debug_logs_handler.py  code_agent.py  debug_events_handler.py  documentation_agent.py  llm_status_handler.py  mode_handler.py  planning_agent.py  prompt_agent.py  review_agent.py  supervisor_agent.py  task_handler.py  test_agent.py
src/backend/agents/utils/: task_utils.py
src/backend/config/: agents.yaml  config_manager.py  rate_limits.yaml  tasks.yaml
src/backend/debug/: debug_console.py
src/backend/docs/: conf.py  index.rst
src/backend/ipc/: message_handler.py
src/backend/llm/: providers.py
src/backend/memory/: memory_manager.py
src/backend/modes/: mode_manager.py
src/backend/tests/: conftest.py  test_code_agent.py  test_task_utils.py
src/backend/tools/: file_operations.py
src/extension/: extension.ts  package-lock.json  package.json  tsconfig.json
src/extension/webview/: debug_panel.ts  llm_settings_panel.ts  mode_control.ts  mode_types.ts  panel.ts  types.ts  utils.ts
src/frontend/: package.json
src/frontend/src/: App.tsx
